# fiware-chef_validator

./: .gitignore  .testr.conf  AUTHORS  Dockerfile  README.md  README.rst  config-generator.conf  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
chef_validator/: version.py
chef_validator/api/: versions.py
chef_validator/api/middleware/: __init__.py  auth_password.py  auth_url.py  context.py  fault.py  ssl.py  version_negotiation.py
chef_validator/api/v1/: __init__.py  actions.py  schemas.py
chef_validator/clients/: chef.py  chef_client_serial.py  chef_client_ssh.py  docker_client.py  glance_client.py  keystone.py  keystone_client.py  nova.py  nova_client.py
chef_validator/cmd/: __init__.py  chef-validator-api.py  chef-validator-client.py  generate_image.py
chef_validator/command/: __init__.py  chef-validator-api.py  chef-validator-client.py  chef_validator_api.py  chef_validator_client.py  generate_image.py
chef_validator/common/: auth_password.py  auth_url.py  config.py  context.py  credentials.py  exception.py  exceptions.py  i18n.py  log.py  utils.py  wsgi.py
chef_validator/engine/: validate.py
chef_validator/engine/clients/: chef.py  client_plugin.py  glance.py  keystone.py  nova.py
chef_validator/locale/: chef_validator.pot
chef_validator/tests/: base.py  recipetest.json  test_config.py  test_log.py  test_test.py  test_version.py  validator_test.py
chef_validator/tests/api/: base.py  test_actions.py  test_fault_middleware.py
chef_validator/tests/common/: test_auth_url.py  (+7 more)
doc/: README.md
doc/source/: adminmanual.rst  conf.py  index.rst  usermanual.rst
etc/chef_validator/: ChefImage.docker  api-paste.ini  chef_validator.conf.sample  solo.json  solo.rb
extras/DockerImage/: Dockerfile
tools/: ChefImage.docker  credentials.py  generateImage.sh  generate_image.py  generateconfig.sh  generatedoc.bat  generatemessages.sh  messages.bat  messages.sh  runtests.sh
tools/chef_cookbook/: README.md  metadata.rb  node.json
(+86 files in other folders)
