#    Licensed under the Apache License, Version 2.0 (the "License"); you may
#    not use this file except in compliance with the License. You may obtain
#    a copy of the License at
#
#         http://www.apache.org/licenses/LICENSE-2.0
#
#    Unless required by applicable law or agreed to in writing, software
#    distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
#    WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
#    License for the specific language governing permissions and limitations
#    under the License.

[metadata]
name=chef_validator
version = 0.0.1
summary = Chef Validator API
description-file = README.rst
license = Apache License, Version 2.0
author = pmverdugo
author_email = pmverdugo@dit.upm.es
homepage = http://github.org/ging/chef_validator

[files]
packages =
    chef_validator
scripts =
    chef_validator/command/chef_validator_api.py
    chef_validator/command/chef_validator_client.py
    chef_validator/command/generate_image.py
data_files =
    /etc/chef_validator =
        etc/chef_validator/chef_validator.conf
        etc/chef_validator/api-paste.ini

[global]
setup-hooks = pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = chef_validator/locale
domain = chef_validator

[update_catalog]
domain = chef_validator
output_dir = chef_validator/locale
input_file = chef_validator/locale/chef_validator.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = chef_validator/locale/chef_validator.pot

[entry_points]
console_scripts =
    chef_validator_api=chef_validator.command.chef_validator_api:main
    generate_image = chef_validator.command.generate_image:main
oslo.config.opts =
    chef_validator = chef_validator.opts:list_opts